# rank_images_project

./: .gitignore  .gitmodules  README.md  constraints.txt  pyproject.toml  requirements.txt
configs/: caption_focus_pipeline.json  comprehensive_pipeline.json  default_pipeline.json  default_pipeline_backup.json  quality_and_alignment_pipeline.json
data/demo_images/: prompts.json  ranking.csv
docker/tifa/: Dockerfile.slim  app.py
docker/tifa/fairseq/: __init__.py
docker/tifa/fairseq/data/: __init__.py  data_utils.py
notebooks/: Colab_range_images.ipynb  Colab_range_images_Flux.ipynb  Colab_test_caption_metrics.ipynb  test_note.ipynb
src/rank_images/: __init__.py  cli.py  config.py  data_processing.py  device_utils.py  example_metric.py  metrics.py  models.py  pipeline_config.py  ranking.py  utils.py
src/rank_images.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
