# pyproject.toml

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rank_images"
version = "0.1.0"
description = "Ранжирование изображений на основе текстовых промптов и качества с помощью SigLIP-2, Florence-2, CLIP-IQA и DINOv2."
authors = [
  {name = "MikePuzitsky", email = "puzitski.mikhail@gmail.com"},
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"

# --- Основные зависимости проекта ---
dependencies = [
    # --- PyTorch и экосистема ---
    "torch>=2.7.1",
    "torchvision>=0.22.1",
    "torchaudio>=2.7.1",
    # torchmetrics с поддержкой мультимодальных метрик
    "torchmetrics[multimodal]",
    
    # --- Трансформеры и NLP ---
    "transformers==4.53.1",
    "sentence-transformers==4.1.0",
    
    # --- Компьютерное зрение ---
    "timm==1.0.17",
    
    # --- Вычисления и трансформации ---
    "einops",
    "piq",
    
    # --- Числовые и табличные данные ---
    # numpy < 2.0.0 для совместимости
    "numpy<2.0.0",
    "pandas==2.2.2",
    "sklearn-pandas==2.2.0",
    
    # --- Утилиты ---
    "tqdm==4.67.1",
    "Pillow", # Обычно тянется через torchvision
    
    # --- Jupyter (опционально, но было в requirements.txt) ---
    "ipywidgets",
]

[project.optional-dependencies]
dev = [
    "black",
    "flake8",
    "isort",
]
test = [
    "pytest",
    "pytest-cov",
]
notebook = [
    "jupyter",
    # ipywidgets уже в основных зависимостях
]

[project.scripts]
rank-images = "rank_images.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"